--- a/css/input/directory/_layout.scss
+++ b/css/input/directory/_layout.scss
@@ -132,18 +132,19 @@ article {
 
 .table--title {
     &.entree, &.plat, &.dessert {
-        > div::after{
+        div::after{
             content: "";
-            top: 0;
+            position: relative;
+            bottom: 0;
             left: 0;
             width: 100%;
             height: 100%;
             border-bottom: solid 2px black;
-            transform-origin: 0;
+            display: block;
             transform: scaleX(0);
             transition: transform 500ms;
         }
-        &:hover > div::after {
+        &:hover div::after {
             transform: scaleX(1);
         }
     }
